Changes in ramdisk

--- a/ramdisk/init.rk30board.rc
+++ b/ramdisk/init.rk30board.rc
@@ -35,8 +35,16 @@ on fs
     mount_all /fstab.rk30sdk
 
 on post-fs-data
-    # We will remap this as /mnt/shell/emulated with the sdcard fuse tool
+    mkdir /data/misc/wifi 0770 wifi wifi
+    mkdir /data/misc/wifi/sockets 0770 wifi wifi
+    mkdir /data/misc/dhcp 0770 dhcp dhcp
+    chown dhcp dhcp /data/misc/dhcp
+
     mkdir /data/media 0770 media_rw media_rw
+
+    # Change back to bluetooth from system
+    chown bluetooth net_bt_stack /data/misc/bluetooth
+
     # Set indication (checked by vold) that we have finished this action
     setprop vold.post_fs_data_done 1
 
@@ -48,24 +56,11 @@ on boot
     # Backlight
     chown system system /sys/class/backlight/rk28_bl/brightness
 
-    # For wifi
-    mkdir /data/misc/wifi 0770 wifi wifi
-    mkdir /data/misc/wifi/sockets 0770 wifi wifi
-    mkdir /data/misc/wifi/sockets/tmp 0440 wifi wifi
-    mkdir /data/misc/wpa_supplicant 0770 wifi wifi
-    mkdir /data/misc/p2p_supplicant 0770 wifi wifi
-    mkdir /data/misc/dhcp 0770 dhcp dhcp
-    chown dhcp dhcp /data/misc/dhcp
-    chown wifi wifi /data/misc/wifi/wpa_supplicant.conf
-    chown wifi wifi /data/misc/wifi/p2p_supplicant.conf
-    chmod 0660 /data/misc/wifi/wpa_supplicant.conf
-    chmod 0660 /data/misc/wifi/p2p_supplicant.conf
-
     # Mirroring device enable
     chown media media /dev/mirroring
     chmod 664 /dev/mirroring
 
-    # Bluetooth power up/down interface
+    # Bluetooth
     chmod 0660 /dev/ttyS0
     chmod 0660 /dev/ttyS2
     chmod 0660 /dev/vflash
@@ -73,6 +68,7 @@ on boot
     chown bluetooth net_bt_stack /dev/ttyS2
     chown bluetooth net_bt_stack /dev/vflash
 
+    # Bluetooth power up/down interface
     chmod 0660 /sys/class/rfkill/rfkill0/state
     chmod 0660 /sys/class/rfkill/rfkill0/type
     chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/state
@@ -82,7 +78,7 @@ on boot
     chown bluetooth net_bt_stack ro.bt.bdaddr_path
     setprop ro.bt.bdaddr_path "/data/blue_mac"
 
-    # For Mali 400
+    # Mali 400
     chown system system /sys/mali400_utility/utility
     chmod 0664 /sys/mali400_utility/utility
     
@@ -100,7 +96,7 @@ on boot
     chmod 0664 /dev/ttyS3
     chown gps system /dev/ttyS3
 
-    # For GPS
+    # GPS
     mkdir /data/gps
     chown gps system /data/gps
     chmod 770 /data/gps
