--- a/ramdisk/init.rc
+++ b/ramdisk/init.rc
@@ -154,7 +154,7 @@ on fs
     mount ext4 mtd@system /system wait ro noatime nodiratime noauto_da_alloc
     mount ext4 mtd@userdata /data wait noatime nodiratime nosuid nodev noauto_da_alloc
     mount ext4 mtd@cache /cache wait noatime nodiratime nosuid nodev noauto_da_alloc
-    # mount_all /fstab.rk30sdk
+    # mount_all /fstab.rk30board
 
     insmod /system/lib/modules/ump.ko
     insmod /system/lib/modules/mali.ko mali_dvfs=50,100,133,160,200,266,400 mali_init_clock=50
