Use generic init.rc

--- a/rootdir/init.rk30board.rc
+++ b/rootdir/init.rk30board.rc
@@ -31,8 +31,14 @@ on init
     symlink /storage/usbdisk0 /usb_storage
 
 on fs
+    # Mount MTD partitions
     insmod /rk30xxnand_ko.ko
     mount_all /fstab.rk30board
+
+    insmod /system/lib/modules/ump.ko
+    insmod /system/lib/modules/mali.ko mali_dvfs=50,100,133,160,200,266,400 mali_init_clock=50
+    insmod /system/lib/modules/rk29-ipp.ko
+    insmod /system/lib/modules/rk30_mirroring.ko
 
 on post-fs-data
     mkdir /data/misc/wifi 0770 wifi wifi
@@ -42,9 +48,6 @@ on post-fs-data
 
     mkdir /data/media 0770 media_rw media_rw
 
-    # Change back to bluetooth from system
-    chown bluetooth net_bt_stack /data/misc/bluetooth
-
     # Set indication (checked by vold) that we have finished this action
     setprop vold.post_fs_data_done 1
 
@@ -53,10 +56,21 @@ on boot
     chmod 0660 /sys/devices/system/cpu/cpu1/online
     insmod /system/lib/modules/vpu_service.ko
 
+    # Mali 400
+    chown system system /sys/mali400_utility/utility
+    chmod 0664 /sys/mali400_utility/utility
+
     # Backlight
     chown system system /sys/class/backlight/rk28_bl/brightness
 
-    # HDMI timeout
+    # Mirroring device enable
+    chown media media /dev/mirroring
+    chmod 664 /dev/mirroring
+
+    # HDMI
+    chown root system /sys/class/display/HDMI/enable
+    chown root system /sys/class/display/HDMI/mode
+    chown root system /sys/class/display/HDMI/scale
     chown root system /sys/class/graphics/fb0/blank
     chmod 0664 /sys/class/graphics/fb0/blank
 
@@ -67,22 +81,14 @@ on boot
     chown bluetooth net_bt_stack /dev/ttyS0
     chown bluetooth net_bt_stack /dev/ttyS2
     chown bluetooth net_bt_stack /dev/vflash
-
-    # Bluetooth power up/down interface
     chmod 0660 /sys/class/rfkill/rfkill0/state
     chmod 0660 /sys/class/rfkill/rfkill0/type
     chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/state
     chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/type
-
-    # Bluetooth MAC address programming
     chown bluetooth net_bt_stack ro.bt.bdaddr_path
     setprop ro.bt.bdaddr_path "/data/blue_mac"
-
-    # Mali 400
-    chown system system /sys/mali400_utility/utility
-    chmod 0664 /sys/mali400_utility/utility
     
-    # Broadcom GPS init
+    # GPS
     write /sys/class/gpio/export 316             # GPS reset
     write /sys/class/gpio/export 315             # GPS standby
     write /sys/class/gpio/gpio316/direction out
@@ -91,29 +97,21 @@ on boot
     write /sys/class/gpio/gpio315/value 0
     chmod 0664 /sys/class/gpio/gpio315/value
     chown gps system /sys/class/gpio/gpio315/value
-
     write /dev/ttyS3 123456		
     chmod 0664 /dev/ttyS3
     chown gps system /dev/ttyS3
-
-    # GPS
     mkdir /data/gps
-    chown gps system /data/gps
     chmod 770 /data/gps
+    chown gps system /data/gps
 
-    # Start virtual sdcard daemon and set serial number
-    start sdcard
-    start serial_number
 
 # Virtual sdcard daemon running as media_rw (1023)
 service sdcard /system/bin/sdcard /data/media /mnt/shell/emulated 1023 1023
-    class late_start
-    disabled
+    class main
 
 # Set serial number
 service serial_number /system/bin/sh /system/bin/serial_number.sh
-    disabled
-    oneshot
+    class main
 
 service wpa_supplicant /system/bin/wpa_supplicant \
     -Dnl80211 -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf
