--- a/rootdir/recovery.rc
+++ b/rootdir/recovery.rc
@@ -2,25 +2,24 @@ on early-init
     start ueventd
     insmod /rk30xxnand_ko.ko
 
+    write /sys/bus/platform/drivers/usb20_otg/force_usb_mode 2
+
 on init
     export PATH /sbin
-    export LD_LIBRARY_PATH .:/sbin
     export ANDROID_ROOT /system
     export ANDROID_DATA /data
     export EXTERNAL_STORAGE /sdcard
 
     symlink /system/etc /etc
 
+    mkdir /boot
+    mkdir /recovery
     mkdir /sdcard
     mkdir /external_sd
     mkdir /system
     mkdir /data
     mkdir /cache
-    mount /tmp /tmp tmpfs
-    
-    write /sys/devices/virtual/bdi/179:0/read_ahead_kb 2048
-    write /sys/devices/virtual/bdi/7:0/read_ahead_kb 2048
-    write /sys/devices/virtual/bdi/31:0/read_ahead_kb 2048
+    mount tmpfs tmpfs /tmp
 
     chown root shell /tmp
     chmod 0775 /tmp
@@ -28,7 +27,7 @@ on init
     write /sys/class/android_usb/android0/enable 0
     write /sys/class/android_usb/android0/idVendor 18D1
     write /sys/class/android_usb/android0/idProduct D001
-    write /sys/class/android_usb/android0/functions mass_storage,adb
+    write /sys/class/android_usb/android0/functions adb,mass_storage
     write /sys/class/android_usb/android0/iManufacturer ${ro.product.manufacturer}
     write /sys/class/android_usb/android0/iProduct ${ro.product.model}
     write /sys/class/android_usb/android0/iSerial ${ro.serialno}
@@ -45,9 +44,6 @@ on boot
 service ueventd /sbin/ueventd
     critical
 
-service erase_misc /sbin/sh -c "busybox dd if=/misc.img of=/dev/block/mtdblock1; sync"
-    oneshot
-
 service recovery /sbin/recovery
 
 service adbd /sbin/adbd recovery
@@ -55,8 +51,8 @@ service adbd /sbin/adbd recovery
 
 # Always start adbd on userdebug and eng builds
 on property:ro.debuggable=1
-    write /sys/class/android_usb/android0/enable 1
-    start adbd
+    #write /sys/class/android_usb/android0/enable 1
+    #start adbd
     setprop service.adb.root 1
 
 # Restart adbd so it can run as root
