--- a/rootdir/recovery.rc
+++ b/rootdir/recovery.rc
@@ -2,8 +2,6 @@ on early-init
     start ueventd
     insmod /rk30xxnand_ko.ko
 
-    write /sys/bus/platform/drivers/usb20_otg/force_usb_mode 2
-
 on init
     export PATH /sbin
     export ANDROID_ROOT /system
@@ -19,7 +17,7 @@ on init
     mkdir /system
     mkdir /data
     mkdir /cache
-    mount tmpfs tmpfs /tmp
+    mount /tmp /tmp tmpfs
 
     chown root shell /tmp
     chmod 0775 /tmp
@@ -27,14 +25,12 @@ on init
     write /sys/class/android_usb/android0/enable 0
     write /sys/class/android_usb/android0/idVendor 18D1
     write /sys/class/android_usb/android0/idProduct D001
-    write /sys/class/android_usb/android0/functions adb,mass_storage
+    write /sys/class/android_usb/android0/functions adb
     write /sys/class/android_usb/android0/iManufacturer ${ro.product.manufacturer}
     write /sys/class/android_usb/android0/iProduct ${ro.product.model}
     write /sys/class/android_usb/android0/iSerial ${ro.serialno}
 
-
 on boot
-
     ifup lo
     hostname localhost
     domainname localdomain
@@ -51,8 +47,8 @@ service adbd /sbin/adbd recovery
 
 # Always start adbd on userdebug and eng builds
 on property:ro.debuggable=1
-    #write /sys/class/android_usb/android0/enable 1
-    #start adbd
+    write /sys/class/android_usb/android0/enable 1
+    start adbd
     setprop service.adb.root 1
 
 # Restart adbd so it can run as root
