--- a/rootdir/init.rk30board.rc
+++ b/rootdir/init.rk30board.rc
@@ -51,17 +51,22 @@ on post-fs-data
 
 on boot
     chown system system /sys/devices/system/cpu/cpu1/online
+    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
+    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_setspeed
     chmod 0660 /sys/devices/system/cpu/cpu1/online
+    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
+    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_setspeed
+
     insmod /system/lib/modules/vpu_service.ko
+
+    # Backlight
+    chown system system /sys/class/backlight/rk28_bl/brightness
 
     # Mali 400
     chown system system /sys/mali400_utility/utility
     chmod 0664 /sys/mali400_utility/utility
 
-    # Backlight
-    chown system system /sys/class/backlight/rk28_bl/brightness
-
-    # Mirroring device enable
+    # Mirroring device
     chown media media /dev/mirroring
     chmod 664 /dev/mirroring
 
@@ -76,11 +81,11 @@ on boot
     chmod 0660 /dev/ttyS0
     chmod 0660 /dev/ttyS2
     chmod 0660 /dev/vflash
+    chmod 0660 /sys/class/rfkill/rfkill0/state
+    chmod 0660 /sys/class/rfkill/rfkill0/type
     chown bluetooth net_bt_stack /dev/ttyS0
     chown bluetooth net_bt_stack /dev/ttyS2
     chown bluetooth net_bt_stack /dev/vflash
-    chmod 0660 /sys/class/rfkill/rfkill0/state
-    chmod 0660 /sys/class/rfkill/rfkill0/type
     chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/state
     chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/type
     chown bluetooth net_bt_stack ro.bt.bdaddr_path
@@ -93,13 +98,13 @@ on boot
     write /sys/class/gpio/gpio315/direction out
     write /sys/class/gpio/gpio316/value 1
     write /sys/class/gpio/gpio315/value 0
+    write /dev/ttyS3 123456
     chmod 0664 /sys/class/gpio/gpio315/value
-    chown gps system /sys/class/gpio/gpio315/value
-    write /dev/ttyS3 123456		
     chmod 0664 /dev/ttyS3
+    chown gps system /sys/class/gpio/gpio315/value
     chown gps system /dev/ttyS3
-    mkdir /data/gps
-    chmod 770 /data/gps
+
+    mkdir /data/gps 770 gps system
     chown gps system /data/gps
 
 
