--- a/rootdir/init.rk30board.usb.rc
+++ b/rootdir/init.rk30board.usb.rc
@@ -5,7 +5,7 @@ on boot
     write /sys/class/android_usb/android0/f_rndis/wceis 1
     write /sys/class/android_usb/android0/iManufacturer ${ro.product.manufacturer}
     write /sys/class/android_usb/android0/iProduct ${ro.product.model}
-    write /sys/class/android_usb/android0/f_mass_storage/inquiry_string $ro.product.usbfactory
+    write /sys/class/android_usb/android0/f_mass_storage/inquiry_string ${name}
 
 on property:sys.usb.config=adb
     write /sys/class/android_usb/android0/enable 0
