--- a/rootdir/init.rk30board.rc
+++ b/rootdir/init.rk30board.rc
@@ -51,11 +51,7 @@ on post-fs-data
 
 on boot
     chown system system /sys/devices/system/cpu/cpu1/online
-    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
-    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_setspeed
     chmod 0660 /sys/devices/system/cpu/cpu1/online
-    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
-    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_setspeed
 
     insmod /system/lib/modules/vpu_service.ko
 
@@ -79,12 +75,10 @@ on boot
 
     # Bluetooth
     chmod 0660 /dev/ttyS0
-    chmod 0660 /dev/ttyS2
     chmod 0660 /dev/vflash
     chmod 0660 /sys/class/rfkill/rfkill0/state
     chmod 0660 /sys/class/rfkill/rfkill0/type
     chown bluetooth net_bt_stack /dev/ttyS0
-    chown bluetooth net_bt_stack /dev/ttyS2
     chown bluetooth net_bt_stack /dev/vflash
     chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/state
     chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/type
@@ -103,7 +97,6 @@ on boot
     chmod 0664 /dev/ttyS3
     chown gps system /sys/class/gpio/gpio315/value
     chown gps system /dev/ttyS3
-
     mkdir /data/gps 770 gps system
     chown gps system /data/gps
 
@@ -112,8 +105,8 @@ on boot
 service sdcard /system/bin/sdcard /data/media /mnt/shell/emulated 1023 1023
     class main
 
-# Set device serial number
-service serial_number /system/bin/sh /system/bin/serial_number.sh
+# Rockchip init
+service rk3xxx /system/bin/sh /system/bin/rk3xxx
     class main
 
 service wpa_supplicant /system/bin/wpa_supplicant \
