Fix storage issues

--- a/rootdir/init.rk30board.rc
+++ b/rootdir/init.rk30board.rc
@@ -19,12 +19,14 @@ on init
     symlink /mnt/shell/emulated/0 /storage/emulated/legacy
 
     # External SD card
+    mkdir /mnt/media_rw/sdcard1 0775 system system
     mkdir /storage/sdcard1 0775 system system
     export SECOND_VOLUME_STORAGE /storage/sdcard1
     symlink /storage/sdcard1 /mnt/external_sd
     symlink /storage/sdcard1 /external_sd
 
     # USB OTG drive
+    mkdir /mnt/media_rw/usbdisk0 0775 system system
     mkdir /storage/usbdisk0 0775 system system
     export THIRD_VOLUME_STORAGE /storage/usbdisk0
     symlink /storage/usbdisk0 /mnt/usb_storage
@@ -101,13 +103,21 @@ on boot
     chown gps system /data/gps
 
 
-# Virtual sdcard daemon running as media_rw (1023)
-service sdcard /system/bin/sdcard /data/media /mnt/shell/emulated 1023 1023
-    class main
-
 # Rockchip init
 service rk3xxx /system/bin/sh /system/bin/rk3xxx
     class main
+
+# Virtual sdcard daemon running as media_rw (1023)
+service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emulated
+    class main
+
+service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard1 /storage/sdcard1
+    class late_start
+    disabled
+
+service fuse_usbdisk0 /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/usbdisk0 /storage/usbdisk0
+    class late_start
+    disabled
 
 service wpa_supplicant /system/bin/wpa_supplicant \
     -Dnl80211 -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf
