--- a/rootdir/init.rk30board.rc
+++ b/rootdir/init.rk30board.rc
@@ -33,7 +33,7 @@ on init
     symlink /storage/usbdisk0 /usb_storage
 
 on fs
-    insmod /rk30xxnand.ko
+    insmod /rk30xxnand_ko.ko
     mount_all /fstab.rk30board
 
     insmod /system/lib/modules/ump.ko
