--- a/rootdir/init.rk30board.rc
+++ b/rootdir/init.rk30board.rc
@@ -53,6 +53,9 @@ on post-fs-data
 on boot
     chown system system /sys/devices/system/cpu/cpu1/online
     chmod 0660 /sys/devices/system/cpu/cpu1/online
+     
+    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_setspeed
+    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_setspeed
 
     insmod /system/lib/modules/vpu_service.ko
 
@@ -159,7 +162,7 @@ service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
     disabled
     oneshot
 
-service iprenew_wlan0 system/bin/dhcpcd -n
+service iprenew_wlan0 /system/bin/dhcpcd -n
     class main
     disabled
     oneshot
@@ -169,7 +172,7 @@ service dhcpcd_p2p /system/bin/dhcpcd -aABKL
     disabled
     oneshot
 
-service iprenew_p2p system/bin/dhcpcd -n
+service iprenew_p2p /system/bin/dhcpcd -n
     class main
     disabled
     oneshot
@@ -179,7 +182,7 @@ service dhcpcd_eth0 /system/bin/dhcpcd -ABKL
     disabled
     oneshot
 
-service iprenew_eth0 system/bin/dhcpcd -n
+service iprenew_eth0 /system/bin/dhcpcd -n
     class main
     disabled
     oneshot
