--- a/rootdir/init.rk30board.rc
+++ b/rootdir/init.rk30board.rc
@@ -197,6 +197,20 @@ service iprenew_bt-pan /system/bin/dhcpcd -n
 service battery_charger /charger
     class charger
 
+on property:sys.gmali.performance=ui
+    start pat_ui
+
+service pat_ui /system/bin/performance ui
+    disabled
+    oneshot
+
+on property:sys.gmali.performance=video
+    start pat_video
+
+service pat_video /system/bin/performance video
+    disabled
+    oneshot
+
 service gps-daemon /system/bin/glgps -c /system/etc/gps/gpsconfig.xml
     class main
     socket gps seqpacket 0660 gps system
